add_subdirectory(test)

add_library(cienis
  nis.cpp
  nis.h
  digest.cpp
  digest.h
  executor.h
  nis_manager.cpp
  nis_manager.h
  nis_types.h
  token.cpp
  token.h
  token_pcsc.cpp
  token_pcsc.h
  reader.cpp
  reader.h
  reader_pcsc.cpp
  reader_pcsc.h
  requests.cpp
  requests.h
  asn/ASNParser.cpp
  asn/ASNParser.h
  arch/posix/thread.cpp
  arch/posix/thread.h
  util/array.cpp
  util/array.h
  util/exception.cpp
  util/exception.h
  util/util.cpp
  util/util.h)

target_include_directories(cienis
  PUBLIC
    ${CRYPTOPP_INCLUDE_DIRS}
    ${PCSCLITE_INCLUDE_DIRS}
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src>)

target_link_libraries(cienis
  PUBLIC
    OpenSSL::SSL
    Threads::Threads
    ${CRYPTOPP_LIBRARIES}
    ${PCSCLITE_LIBRARIES})
